--- a/Python/Slices.html
+++ b/Python/Slices.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="icon" href="img/atom.ico"><title>Leucippus Synthetic</title>
+<link rel="icon" href="img/atom.ico"><title>Leucippus Local</title>
 <style> 
 body {text-align:left;background-color:LightSteelBlue;margin-left: 52px;}
 img {width:85%;border:1px solid MistyRose; }
@@ -24,9 +24,10 @@ a:hover {color:white;}
 </h1>
 <p style="background-color:Crimson;margin:5px;padding:5px;color:AliceBlue;">
    <a href='Leucippus.html' title='Home' target='_self'>PhD Home</a>
- ~  <a href='InputPeaks.html' title='Home' target='_self'>User Uploads</a>
- ~  <a href='Peaks.html' title='Home' target='_self'>Peaks Explorer</a>
- ~  <a href='Slices.html' title='Home' target='_self'>Local Maps</a>
+ ~  <a href='Peaks.html' title='Peaks' target='_self'>Peaks Explorer</a>
+ ~  <a href='Slices.html' title='Slices' target='_self'>Local Maps</a>
+ ~  <a href='Geometry.html' title='Geometry' target='_self'>Geometry</a>
+ ~  <a href='InputPeaks.html' title='Upload' target='_self'>User Uploads</a>
  ~  <a href='Documentation.html' title='Docs' target='_self'>About</a>
 ~ <a href='https://www.bbk.ac.uk/departments/biology/' title='Birkbeck' target='_blank'>Birkbeck Biology</a>
 </p>
@@ -39,8 +40,10 @@ a:hover {color:white;}
 <h3>PhD project: <font color="DC143C">Leu</font>cip<font color="DC143C">pus</font> - Atomic <font color="DC143C">Density</font> Explorer</h3>
 </p>
 <p>
-This webpage interfaces with a C++ executable which calculates synthetic density for the given atoms. This tool is used to explore Gaussian Overlap and Density Drift.
+This webpage interfaces with a C++ executable which calculates density slices in ccp4 files. 
+<br/><i>Enter either a pdb code with ccp4 on the ebi, or a user upload code</i>
 </p>
+
 
 <hr/>
  <div>
