--- a/Python/Synthetic.html
+++ b/Python/Synthetic.html
@@ -24,9 +24,10 @@ a:hover {color:white;}
 </h1>
 <p style="background-color:Crimson;margin:5px;padding:5px;color:AliceBlue;">
    <a href='Leucippus.html' title='Home' target='_self'>PhD Home</a>
- ~  <a href='InputPeaks.html' title='Home' target='_self'>User Uploads</a>
- ~  <a href='Peaks.html' title='Home' target='_self'>Peaks Explorer</a>
- ~  <a href='Slices.html' title='Home' target='_self'>Local Maps</a>
+ ~  <a href='Peaks.html' title='Peaks' target='_self'>Peaks Explorer</a>
+ ~  <a href='Slices.html' title='Slices' target='_self'>Local Maps</a>
+ ~  <a href='Geometry.html' title='Geometry' target='_self'>Geometry</a>
+ ~  <a href='InputPeaks.html' title='Upload' target='_self'>User Uploads</a>
  ~  <a href='Documentation.html' title='Docs' target='_self'>About</a>
 ~ <a href='https://www.bbk.ac.uk/departments/biology/' title='Birkbeck' target='_blank'>Birkbeck Biology</a>
 </p>
