LINUX before I go away

--- a/Python/Leucippus.html
+++ b/Python/Leucippus.html
@@ -173,7 +173,8 @@ The image will be the width specified, and will have sampled points at every gap
 Start with a reasonable size gap until you have the image you want, then you can perfect it.
 
 <h3>Results</h3>
-
+<p>The 3 results views have the same orientation constructed with the centre point in the middle, 
+the linear point vertically above, the planar point to the right. Small yellow dots are placed at these 3 input positions.
 <li><b>Density</b></li>
 This is a visualisation of the density directly, interpolated as chosen (see Figure 3). 
 <br/>To assist the visualisation the contours have been set to a cap of 30% - everything above 30% of the maximum value is the same and black in the image.. This enables lower contour density to be visible.
