--- a/Python/Peaks.html
+++ b/Python/Peaks.html
@@ -61,7 +61,8 @@ This webpage interfaces with a C++ executable which calculates density maxima in
 <tr><td><label for="D5">5) Density visual projection, all atoms</label></td><td><input type="checkbox" id="Data5" name="Data5" value="1" checked="checked"></td></tr>
 <tr><td><label for="D6">6) Atoms visualised on AtomNo</label></td><td><input type="checkbox" id="Data6" name="Data6" value="1" checked="checked"></td></tr>
 <tr><td><label for="D7">7) Create density adjusted pdb file</label></td><td><input type="checkbox" id="Data7" name="Data7" value="1"></td></tr>
-<tr><td><label for="D8">8) Create laplacian adjusted pdb file</label></td><td><input type="checkbox" id="Data8" name="Data8" value="1"></td></t,D8,D8>
+<tr><td><label for="D8">8) Create laplacian adjusted pdb file</label></td><td><input type="checkbox" id="Data8" name="Data8" value="1"></td></tr>
+<tr><td><label for="D9">9) View raw density map</label></td><td><input type="checkbox" id="Data9" name="Data9" value="1"></td></tr>
 <!--<tr><td><label for="D7">7) Visualised electron density planes</label></td><td><input type="checkbox" id="Data7" name="Data7" value="1" checked="checked"></td></tr>-->
 </table>
 </td><td><div style="text-align: left;">
